before use webpack

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,12 @@
 {
-  "name": "WTF: PWA",
-  "short_name": "WTF: PWA",
+  "name": "WaterApp Wojciech Sadomski",
+  "short_name": "WaterApp",
   "theme_color": "#2D2241",
   "background_color": "#2D2241",
   "display": "standalone",
   "orientation": "portrait",
-  "scope": "/wtf-webpack-starter/",
-  "start_url": "/wtf-webpack-starter/",
+  "scope": "/waterApp/",
+  "start_url": "/waterApp/",
   "icons": [
     {
       "src": "pwa/manifest-icon-192.png",
